<resources>
    <string name="app_name">AgroVision</string>
    <string name="Beranda" />
    <string name="Berita" />
    <string name="Riwayat" />
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="email">Email</string>
    <string name="masukkan_alamat_email">Masukkan alamat email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Masukkan Password</string>
    <string name="login">Login</string>
    <string name="google_icon">Google Icon</string>
    <string name="login_dengan_google">Login Dengan Google</string>
    <string name="daftar">Belum Punya Akun? Daftar</string>
    <string name="agrovision">AgroVision</string>
    <string name="result">"Hasil "</string>
    <string name="hasil_analisis">"Hasil Analisis : "</string>
    <string name="alamat_email">Alamat Email :</string>
    <string name="username">Username :</string>
    <string name="log_out">Log Out</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="profile">Profile</string>
    <string name="p_password">Password :</string>
    <string name="password_anda">Password anda</string>
    <string name="username_anda">Username anda</string>
    <string name="email_anda">Alamat email anda</string>
    <string name="leaf_image_desc">landing page image\n</string>
</resources>